<resources>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="UC">
        <item>UC Lachi Payan</item>
        <item>UC Lachi Bala</item>
        <item>UC Mandoori</item>
        <item>UC Sudal</item>
        <item>UC Darmalak</item>
    </string-array>

    <string name="app_name">KP TMA Services</string>
    <string name="map_api_key">AIzaSyC25fz7R_AYrRD5v6spK89aW9yt2Oiafl4</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="user_password">Password</string>
    <string name="user_email">Email</string>
    <string name="user_name">Name</string>
    <string name="phone_no">Phone No</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cnic">Cnic</string>
    <string name="already_have_account">Already have account?</string>
    <string name="create_new_account">Create new account?</string>
    <string name="login_txt">Login</string>
    <string name="signup">SignUp</string>
    <string name="title_activity_complaints">Complaints</string>
    <string name="dummy">I am trying to set ellipsize of text view. using the following code. I want to add at the end of truncated string after 3 dots. If this would be possible with same text view that would be great, or</string>
    <string name="date_time">date/time</string>
    <string name="complaint_status">complaint status</string>
    <string name="pending">Pending</string>
    <string name="completed">Completed</string>
    <string name="upload_image">Upload Image</string>
    <string name="title_hint">e.g : Cleanliness of street</string>
    <string name="complaint_description">Describe your complaint here</string>
    <string name="worker_name">worker name</string>
    <string name="add_comment">Add Comment</string>
    <string name="submit">Submit</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact_no">Contact No</string>
    <string name="title_e_g_market">Title e.g market</string>
    <string name="upload_map">Upload Map</string>
    <string name="your_total_noc">Your Noc Details</string>
    <string name="no_file_choosen">No file choosen</string>
    <string name="applicant_name">Applicant Name</string>
    <string name="applicant_cnic">Applicant Cnic</string>
    <string name="child_name">Child Name</string>
    <string name="child_religion_with_applicant">Child Relation With applicant</string>
    <string name="mother_name">Mother Name</string>
    <string name="father_name">Father Name</string>
    <string name="father_cnic">Father Cnic</string>
    <string name="mother_cnic">Mother Cnic</string>
    <string name="grand_father_name">Grand Father Name</string>
    <string name="grand_father_cnic">Grand Father Cnic</string>
    <string name="religion">Religion</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="vaccinated">Vaccinated</string>
    <string name="place_of_birth">Place of Birth</string>
    <string name="doctor_or_midwife_name">Doctor or MidWife Name</string>
    <string name="disability">Disability</string>
    <string name="address">Address</string>
    <string name="choose_front_side">No front side cnic is choosen</string>
    <string name="apply">Apply</string>
    <string name="district_of_birth">District_of_birth</string>
    <string name="upload_cnic">Upload Cnic</string>
    <string name="deceased_name">Deceased Name</string>
    <string name="deceased_cnic">Deceased Cnic</string>
    <string name="relation_with_applicant">Relation with Applicant</string>
    <string name="deceased_father_name">Deceased Father Name</string>
    <string name="deceased_father_cnic">Deceased Father Cnic</string>
    <string name="deceased_date_of_birth">Deceased Date of Birth</string>
    <string name="gravayard_name">Gravayard Name</string>
    <string name="husband_cnic">Husband/Wife Cnic</string>
    <string name="husband_name">Husband/Wife Name</string>
    <string name="deceased_mother_name">Deceased Mother Name</string>
    <string name="deceased_mother_cnic">Deceased Mother Cnic</string>
    <string name="driver_name">Driver Name</string>
    <string name="name_of_driver">Name of Driver</string>
    <string name="noc_status">Noc Status</string>
    <string name="title_activity_maps">Map</string>
    <string name="channel_id">channel_id</string>
    <string name="confirm_password_urdu">پاس ورڈ کی تصدیق</string>
    <string name="password_urdu">پاس ورڈ</string>
    <string name="cnic_urdu">شناختی کارڈ نمبر</string>
    <string name="phone_urdu">فون نمبر</string>
    <string name="email_urdu">ای میل</string>
    <string name="name_urdu">نام</string>
    <string name="relationInUrdu">بچے کا درخواست دہندہ کے ساتھ  رشتہ</string>
    <string name="religionInUrdu">مذہب</string>
    <string name="fatherNameInUrdu">والد کا نام</string>
    <string name="fatherCnicUrdu">والد شناختی کارڈ نمبر</string>
    <string name="motherNameInUrdu">ماں کا نام</string>
    <string name="motherCnicUrdu">ماں کا شناختی کارڈ نمبر</string>
    <string name="grandFatherNameUrdu">دادا کا نام</string>
    <string name="grandFatherCnicUrdu">دادا کا شناختی کارڈ نمبر</string>
    <string name="districtInUrdu">ضلع پیدائش</string>
    <string name="dateOfBirthUrdu">تاریخ پیدائش</string>
    <string name="vaccinateUrdu">ویکسینیشن</string>
    <string name="placeOfBirthUrdu">پیدائش کی جگہ</string>
    <string name="doctorUrdu">ڈاکٹر / دائی کا نام</string>
    <string name="disabilityUrdu">معذوری</string>
    <string name="addressUrdu">پتہ</string>
    <string name="genderUrdu">جنس</string>
    <string name="ucUrdu">یونین کونسل</string>
    <string name="deceasedNameUrdu">مرحوم کا نام</string>
    <string name="deceaseCnicUrdu">مرحوم کا شناختی کارڈ نمبر </string>
    <string name="deceaseFatherNameUrdu">مرحوم والد کا نام</string>
    <string name="deceaseFatherCnicUrdu">والد کا شناختی کارڈ نمبر</string>
    <string name="deceaseMotherCnicUrdu"> مرحوم کا والدہ کا شناختی کارڈ نمبر</string>
    <string name="deceaseMotherNameUrdu"> مرحوم کا والدہ کا نام</string>
    <string name="husbanNameUrdu">شوہر / بیوی کا نام</string>
    <string name="husbandCnicUrdu">شوہر / بیوی کا شناختی کارڈ نمبر</string>
    <string name="graveYardUrdu">قبرستان</string>
    <string name="deceaseDateOfBirth"> مرحوم کا تاریخ پیدائش</string>

</resources>
