<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".BuildingNoc.BuildingNocActivity">

    <!-- include tool bar in this activity -->
    <include layout="@layout/app_tool_bar"
        android:id="@+id/noc_tool_bar"/>


    <!-- Title edit text -->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/nocTitleTextInputLayout"
        android:layout_below="@id/noc_tool_bar"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="@dimen/edit_margin"
        app:boxStrokeColor="@color/txt_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_e_g_market"
            android:inputType="text"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Button upload noc -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:id="@+id/btnUploadNoc"
        android:layout_alignParentLeft="true"
        android:textColor="@color/txt_color"
        android:layout_marginLeft="@dimen/edit_margin"
        android:layout_below="@+id/nocTitleTextInputLayout"
        android:gravity="center"
        android:layout_marginTop="@dimen/edit_margin"
        android:textSize="15sp"
        android:text="@string/upload_map"/>

    <!-- Text no file choosen -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtNoFileChoose"
        android:layout_below="@+id/nocTitleTextInputLayout"
        android:layout_toRightOf="@+id/btnUploadNoc"
        android:text="@string/no_file_choosen"
        android:layout_marginTop="@dimen/edit_margin_top"
        android:layout_marginLeft="@dimen/txt_margin_left"
        />

    <!-- Image noc upload -->
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/chooseNocImage"
        android:layout_below="@+id/nocTitleTextInputLayout"
        android:layout_toRightOf="@id/btnUploadNoc"
        android:src="@mipmap/ic_launcher"
        android:layout_marginTop="@dimen/edit_margin"
        android:layout_marginLeft="@dimen/txt_margin_left"
        android:visibility="invisible"
        />

    <!-- Button submit noc -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button"
        android:id="@+id/btnSubmitNoc"
        android:backgroundTint="@color/txt_color"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/edit_margin"
        android:layout_below="@+id/btnUploadNoc"
        android:gravity="center"
        android:layout_marginTop="@dimen/edit_margin"
        android:textSize="15sp"
        android:text="@string/submit"
        app:cornerRadius="16dp"/>

    <!-- Text your noc details -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtYourTotalNoc"
        android:layout_below="@+id/btnSubmitNoc"
        android:text="@string/your_total_noc"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/edit_margin_top"
        android:layout_marginLeft="@dimen/txt_margin_left"
        />

    <!-- Building Noc recycler view -->
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtYourTotalNoc"
        android:id="@+id/nocRecyclerView"
        android:layout_margin="@dimen/reycler_view_margin">
    </androidx.recyclerview.widget.RecyclerView>





</RelativeLayout>